Include manifest file.

--- a/ddoplanner/manifest.json
+++ b/ddoplanner/manifest.json
@@ -1,3 +1,7 @@
 {
-	"test": "test"
+	"name": "DDO Planner",
+	"short_name": "DDO Planner",
+	"display": "standalone",
+	"background_color": "#111111",
+	"theme_color": "#282828"
 }
