Updated ddoplanner to revision 90bb6b52e554e34933ee9e02547b489eb1c7b67c

--- a/ddoplanner/manifest.json
+++ b/ddoplanner/manifest.json
@@ -3,6 +3,6 @@
 	"display": "standalone",
 	"name": "DDO Planner",
 	"short_name": "DDO Planner",
-	"start_url": "https://taplar.github.io/ddoplanner",
+	"start_url": "https://taplar.github.io/ddoplanner/index.html",
 	"theme_color": "#282828"
 }
