Updated ddoplanner to revision 31865beaaa299589b4a72e48d440e392c63a2700

--- a/ddoplanner/manifest.json
+++ b/ddoplanner/manifest.json
@@ -1,8 +1,20 @@
 {
 	"background_color": "#111111",
 	"display": "standalone",
+	"icons": [
+		{
+			"src": "d20Icon_192x192.png",
+			"type": "image/png",
+			"sizes": "192x192"
+		},
+		{
+			"src": "d20Icon_512x512.png",
+			"type": "image/png",
+			"sizes": "512x512"
+		}
+	],
 	"name": "DDO Planner",
 	"short_name": "DDO Planner",
-	"start_url": "https://taplar.github.io/ddoplanner/index.html",
+	"start_url": "index.html",
 	"theme_color": "#282828"
 }
