--- a/ddoplanner/assets/jsons/manifest.json
+++ b/ddoplanner/assets/jsons/manifest.json
@@ -3,12 +3,12 @@
 	"display": "standalone",
 	"icons": [
 		{
-			"src": "d20Icon_192x192.png",
+			"src": "./assets/images/icons/d20Icon_192x192.png",
 			"type": "image/png",
 			"sizes": "192x192"
 		},
 		{
-			"src": "d20Icon_512x512.png",
+			"src": "./assets/images/icons/d20Icon_512x512.png",
 			"type": "image/png",
 			"sizes": "512x512"
 		}
