Update ddoplanner to revision dfad9912d3d42f52a6df0cceffec52fbb42cd771

--- a/ddoplanner/assets/jsons/manifest.json
+++ b/ddoplanner/assets/jsons/manifest.json
@@ -15,6 +15,6 @@
 	],
 	"name": "DDO Planner",
 	"short_name": "DDO Planner",
-	"start_url": "index.html",
+	"start_url": "../../index.html",
 	"theme_color": "#282828"
 }
